コードレビュー修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
     <ul class='item-lists'>
 
       <% @items.each do |item| %>
-        <% unless @items == nil %>
+        <% unless @items == [] %>
           <li class='list'>
             <%= link_to "#" do %>
             <div class='item-img-content'>
