--- a/app/views/buys/index.html.erb
+++ b/app/views/buys/index.html.erb
@@ -33,7 +33,8 @@
     <%= form_with model: @buy_delivery, url: item_buys_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
     <%= render 'shared/error_messages', model: @buy_delivery %>
     
-    <div class='credit-card-form'>
+    <%# 追加実装のため不要になったため削除%>
+    <%#<div class='credit-card-form'>
       <h1 class='info-input-haedline'>
         クレジットカード情報入力
       </h1>
@@ -43,23 +44,23 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :number, class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
-        <div class='available-card'>
+        <%#div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
-          <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
-          <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
-          <%= image_tag 'card-amex.gif', class: 'card-logo'%>
-        </div>
+          <%#= image_tag 'card-mastercard.gif', class: 'card-logo'%>
+          <%#= image_tag 'card-jcb.gif', class: 'card-logo'%>
+          <%#= image_tag 'card-amex.gif', class: 'card-logo'%>
+        <%#</div>
       </div>
-      <div class="form-group">
+      <%#div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">有効期限</label>
           <span class="indispensable">必須</span>
         </div>
         <div class='input-expiration-date-wrap'>
           <%= f.text_area :exp_month, class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
-          <p>月</p>
+          <%#p>月</p>
           <%= f.text_area :exp_year, class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
-          <p>年</p>
+          <%#p>年</p>
         </div>
       </div>
       <div class="form-group">
@@ -68,8 +69,8 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :cvc, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
-      </div>
-    </div>
+      <%# </div>
+    <%# </div> #%>
     
     <div class='shipping-address-form'>
       <h1 class='info-input-haedline'>
